--- a/Card Types/Plural/Gender/Gender/Back_Whats-the-grammatical-gender-for-this-word.html
+++ b/Card Types/Plural/Gender/Gender/Back_Whats-the-grammatical-gender-for-this-word.html
@@ -1,6 +1,6 @@
 {{FrontSide}}
 <hr id=answer>
-<div style="font-family:Arial; font-size:20px;">{{Singular Article + IPA}}</div>
+<div style="font-family:Arial; font-size:20px;">{{Plural Article + IPA}}</div>
 
 {{#Masculine}}
   <div style="background-color:blue; margin-top:15px;">
@@ -23,4 +23,4 @@
   </div>
 {{/Neuter}}
 
-<div style="font-family:Arial; font-size:20px;">{{Singular Recording}}</div>
+<div style="font-family:Arial; font-size:20px;">{{Plural Recording}}</div>
