--- a/Card Types/Plural/Gender/Gender/Front_Whats-the-grammatical-gender-for-this-word.html
+++ b/Card Types/Plural/Gender/Gender/Front_Whats-the-grammatical-gender-for-this-word.html
@@ -1,5 +1,5 @@
-{{#Singular}}
+{{#Plural}}
   <span>What is the grammatical gender for this word?</span><br/>
-  <span style="font-family:Arial; font-size:20px;">{{Singular}}</span><br/>
+  <span style="font-family:Arial; font-size:20px;">{{Plural}}</span><br/>
   <br><span style="font-family:Arial; font-size:20px;">{{Picture}}</span></br>
-{{/Singular}}
+{{/Plural}}
