Updates plural pronunciation cards

--- a/Card Types/Plural/Gender/Pronunciation/Front_How-do-you-you-say.html
+++ b/Card Types/Plural/Gender/Pronunciation/Front_How-do-you-you-say.html
@@ -1,17 +1,17 @@
-{{#Singular}}
+{{#Plural}}
   <span>How do you say...?</span><br/>
 
   {{#Masculine}}
-    <br><span style="font-family:Arial; font-size:20px; color:white; background-color:blue;">{{Singular}}</span></br>
+    <br><span style="font-family:Arial; font-size:20px; color:white; background-color:blue;">{{Plural}}</span></br>
   {{/Masculine}}
 
   {{#Feminine}}
-    <br><span style="font-family:Arial; font-size:20px; color:white; background-color:pink;">{{Singular}}</span></br>
+    <br><span style="font-family:Arial; font-size:20px; color:white; background-color:pink;">{{Plural}}</span></br>
   {{/Feminine}}
 
   {{#Neuter}}
-    <br><span style="font-family:Arial; font-size:20px; color:white; background-color:gray;">{{Singular}}</span></br>
+    <br><span style="font-family:Arial; font-size:20px; color:white; background-color:gray;">{{Plural}}</span></br>
   {{/Neuter}}
 
   <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
-{{/Singular}}
+{{/Plural}}
