--- a/Card Types/Plural/Gender/Pronunciation/Back_How-do-you-you-say.html
+++ b/Card Types/Plural/Gender/Pronunciation/Back_How-do-you-you-say.html
@@ -2,6 +2,7 @@
 
 <hr id=answer>
 
-<div style="font-family:Arial; font-size:20px;">{{Singular}}</div>
-<div style="font-family:Arial; font-size:20px;">{{Singular Article + IPA}}</div>
-<div style="font-family:Arial; font-size:20px;">{{Singular Recording}}</div>
+<div style="object-fit:contain; height:250px;">{{Picture}} {{Picture}}</div>
+<div style="font-family:Arial; font-size:20px;">{{Plural}}</div>
+<div style="font-family:Arial; font-size:20px;">{{Plural Article + IPA}}</div>
+<div style="font-family:Arial; font-size:20px;">{{Plural Recording}}</div>
