--- a/Card Types/Plural/Recall/Back_Whats-the-word-for-this-picture.html
+++ b/Card Types/Plural/Recall/Back_Whats-the-word-for-this-picture.html
@@ -14,7 +14,7 @@
 {{/Neuter}}
 
 
-<div style="font-family:Arial; font-size:20px;">{{Singular}}</div>
-<div style="font-family:Arial; font-size:20px;">{{Singular Article + IPA}}</div>
+<div style="font-family:Arial; font-size:20px;">{{Plural}}</div>
+<div style="font-family:Arial; font-size:20px;">{{Plural Article + IPA}}</div>
 
-<div style="font-family:Arial; font-size:20px;">{{Singular Recording}}</div>
+<div style="font-family:Arial; font-size:20px;">{{Plural Recording}}</div>
