--- a/Card Types/Plural/Recall/Front_Whats-the-word-for-this-picture.html
+++ b/Card Types/Plural/Recall/Front_Whats-the-word-for-this-picture.html
@@ -1,4 +1,4 @@
-{{#Singular}}
+{{#Plural}}
   <span>What's the word for this picture?</span><br/>
 
   {{#Masculine}}
@@ -16,6 +16,6 @@
     <span style="font-family:Arial; font-size:20px;">{{Picture}}</span></br>
   {{/Neuter}}
 
-  <span style="font-family:Arial; font-size:20px;">[Singular]</span>
+  <span style="font-family:Arial; font-size:20px;">[Plural]</span>
   <br/>
-{{/Singular}}
+{{/Plural}}
