Updates plural spelling cards

--- a/Card Types/Plural/Spelling/Front_Spell-this-word.html
+++ b/Card Types/Plural/Spelling/Front_Spell-this-word.html
@@ -1,12 +1,12 @@
 {{#Test Spelling? (y = yes, blank = no)}}
 
-  {{#Singular}}
+  {{#Plural}}
     <span>Spell this word: </span><br/>
 
-    <br><span>[Singular]</span></br>
+    <br><span>[Plural]</span></br>
     <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
-    <span>{{type:Singular}}</span><br/>
-    <div>{{Singular Recording}}</div>
-  {{/Singular}}
+    <span>{{type:Plural}}</span><br/>
+    <div>{{Plural Recording}}</div>
+  {{/Plural}}
 
 {{/Test Spelling? (y = yes, blank = no)}}
