--- a/Card Types/Plural/Spelling/Back_Spell-this-word.html
+++ b/Card Types/Plural/Spelling/Back_Spell-this-word.html
@@ -1,33 +1,33 @@
 {{#Masculine}}
-  <span style="font-size:1.5em; background-color:blue; color:white;">{{Singular}}</span><br><br>
+  <span style="font-size:1.5em; background-color:blue; color:white;">{{Plural}}</span><br><br>
   <span>{{Picture}}</span><br>
   <hr id=answer>
-  <span>{{type:Singular}}</span><br>
+  <span>{{type:Plural}}</span><br>
   <div style="background-color: blue; color:white;">
-    <span style="font-family: Arial; font-size: 20px;">{{Singular}}</span></br>
-    <span style="font-family: Arial; font-size: 20px;">{{Singular Article + IPA}}</span></br>
+    <span style="font-family: Arial; font-size: 20px;">{{Plural}}</span></br>
+    <span style="font-family: Arial; font-size: 20px;">{{Plural Article + IPA}}</span></br>
   </div>
 {{/Masculine}}
 
 {{#Feminine}}
-<span style="font-size:1.5em; background-color:pink; color:white;">{{Singular}}</span><br><br>
+<span style="font-size:1.5em; background-color:pink; color:white;">{{Plural}}</span><br><br>
 <span>{{Picture}}</span><br>
 <hr id=answer>
-<span>{{type:Singular}}</span><br>
+<span>{{type:Plural}}</span><br>
 <div style="background-color: pink; color:white;">
-  <span style="font-family: Arial; font-size: 20px;">{{Singular}}</span></br>
-  <span style="font-family: Arial; font-size: 20px;">{{Singular Article + IPA}}</span></br>
+  <span style="font-family: Arial; font-size: 20px;">{{Plural}}</span></br>
+  <span style="font-family: Arial; font-size: 20px;">{{Plural Article + IPA}}</span></br>
 </div>
 {{/Feminine}}
 
 {{#Neuter}}
-<span style="font-size:1.5em; background-color:gray; color:white;">{{Singular}}</span><br><br>
+<span style="font-size:1.5em; background-color:gray; color:white;">{{Plural}}</span><br><br>
 <span>{{Picture}}</span><br>
 <hr id=answer>
-<span>{{type:Singular}}</span><br>
+<span>{{type:Plural}}</span><br>
 <div style="background-color: gray; color:white;">
-  <span style="font-family: Arial; font-size: 20px;">{{Singular}}</span></br>
-  <span style="font-family: Arial; font-size: 20px;">{{Singular Article + IPA}}</span></br>
+  <span style="font-family: Arial; font-size: 20px;">{{Plural}}</span></br>
+  <span style="font-family: Arial; font-size: 20px;">{{Plural Article + IPA}}</span></br>
 </div>
 {{/Neuter}}
-<div style="font-family: Arial; font-size: 20px;">{{Singular Recording}}</div>
+<div style="font-family: Arial; font-size: 20px;">{{Plural Recording}}</div>
