--- a/Card Types/Singular/Gender/Back_Whats-the-grammatical-gender-for-this-word.html
+++ b/Card Types/Singular/Gender/Back_Whats-the-grammatical-gender-for-this-word.html
@@ -12,7 +12,7 @@
 {{#Feminine}}
   <div style="background-color:pink; margin-top:15px;">
     <div style="vertical-align:middle; padding-top:15px;">weiblich</div><br/>
-    <img src="https://i.imgur.com/viJwgk8.png" style="height:100px; position:aboslute; right:0px; margin-bottom:15px;"></img><br/>
+    <img src="https://i.imgur.com/UWdYoKX.png" style="height:100px; position:aboslute; right:0px; margin-bottom:15px;"></img><br/>
   </div>
 {{/Feminine}}
 
