Updates plural comprehension cards

--- a/Card Types/Plural/Comprehension/Back_What is the image for this word.html
+++ b/Card Types/Plural/Comprehension/Back_What is the image for this word.html
@@ -5,22 +5,16 @@
 <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
 
 {{#Masculine}}
-  <div style="color:white; background-color:blue; width:100">
-    <div style="font-family:Arial; font-size:20px;">{{Plural}}</div>
-    <div style="font-family:Arial; font-size:20px;">{{Plural Article + IPA}}</div>
-  </div>
+  <br><span style="color:black; padding:5px; border:5px solid blue;">{{Plural}}</span><br/>
+  <br><span style="color:black; padding:5px; border:5px solid blue;">{{Plural Article + IPA}}</span><br/>
 {{/Masculine}}
 
 {{#Feminine}}
-  <div style="color:white; background-color:pink;">
-    <div style="font-family:Arial; font-size:20px;">{{Plural}}</div>
-    <div style="font-family:Arial; font-size:20px;">{{Plural Article + IPA}}</div>
-  </div>
+  <br><span style="color:black; padding:5px; border:5px solid pink;">{{Plural}}</span><br/>
+  <br><span style="color:black; padding:5px; border:5px solid pink;">{{Plural Article + IPA}}</span><br/>
 {{/Feminine}}
 
 {{#Neuter}}
-  <div style="color:white; background-color:gray;">
-    <div style="font-family:Arial; font-size:20px;">{{Plural}}</div>
-    <div style="font-family:Arial; font-size:20px;">{{Plural Article + IPA}}</div>
-  </div>
+  <br><span style="color:black; padding:5px; border:5px solid gray;">{{Plural}}</span><br/>
+  <br><span style="color:black; padding:5px; border:5px solid gray;">{{Plural Article + IPA}}</span><br/>
 {{/Neuter}}
