--- a/Card Types/Plural/Comprehension/Front_What is the image for this word.html
+++ b/Card Types/Plural/Comprehension/Front_What is the image for this word.html
@@ -2,15 +2,24 @@
   <span>What does this word mean?</span><br/>
 
   {{#Masculine}}
-    <br><div style="color:white; background-color:blue;">{{Plural}}</div><br/>
+    <br><span style="color:black; padding:5px; border:5px solid blue;">{{Plural}}</span><br/>
+    <br><div style="background-color:blue;">
+      <img src="https://i.imgur.com/I5dh3xe.png" style="float:right; margin-right:15px; border:5px solid blue; height:100px;">
+    </div><br/>
   {{/Masculine}}
 
   {{#Feminine}}
-    <br><div style="color:white; background-color:pink;">{{Plural}}</div><br/>
+    <br><span style="color:black; padding:5px; border:5px solid pink;">{{Plural}}</span><br/>
+    <br><div style="background-color:pink;">
+      <img src="https://i.imgur.com/viJwgk8.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;">
+    </div><br/>
   {{/Feminine}}
 
   {{#Neuter}}
-    <br><div style="color:white; background-color:gray;">{{Plural}}</div><br/>
+    <br><span style="color:black; padding:5px; border:5px solid gray;">{{Plural}}</span><br/>
+    <br><div style="background-color:gray;">
+      <img src="https://i.imgur.com/l70VNHM.png" style="float:right; margin-right:15px; border:5px solid gray; height:100px;">
+    </div><br/>
   {{/Neuter}}
 {{/Plural}}
 
