--- a/Card Types/Singular/Comprehension/Front_What is the image for this word.html
+++ b/Card Types/Singular/Comprehension/Front_What is the image for this word.html
@@ -2,23 +2,23 @@
   <span>What does this word mean?</span><br/>
 
   {{#Masculine}}
-    <br><div style="color:white; background-color:blue;">{{Singular}}</div><br/>
+    <br><span style="color:black; padding:5px; border:5px solid blue;">{{Singular}}</span><br/>
     <br><div style="background-color:blue;">
-      <img src="https://i.imgur.com/I5dh3xe.png" style="float:right; margin-right:15px; height:100px;">
+      <img src="https://i.imgur.com/I5dh3xe.png" style="float:right; margin-right:15px; border:5px solid blue; height:100px;">
     </div><br/>
   {{/Masculine}}
 
   {{#Feminine}}
-    <br><div style="color:white; background-color:pink;">{{Singular}}</div><br/>
+    <br><span style="color:black; padding:5px; border:5px solid pink;">{{Singular}}</span><br/>
     <br><div style="background-color:pink;">
-      <img src="https://i.imgur.com/viJwgk8.png" style="float:right; margin-right:15px; height:100px;">
+      <img src="https://i.imgur.com/viJwgk8.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;">
     </div><br/>
   {{/Feminine}}
 
   {{#Neuter}}
-    <br><div style="color:white; background-color:gray;">{{Singular}}</div><br/>
+    <br><span style="color:black; padding:5px; border:5px solid gray;">{{Singular}}</span><br/>
     <br><div style="background-color:gray;">
-      <img src="https://i.imgur.com/l70VNHM.png" style="float:right; margin-right:15px; height:100px;">
+      <img src="https://i.imgur.com/l70VNHM.png" style="float:right; margin-right:15px; border:5px solid gray; height:100px;">
     </div><br/>
   {{/Neuter}}
 {{/Singular}}
