Update plural and singular comprehension cards with new styling and img

--- a/Card Types/Plural/Comprehension/Back_What is the image for this word.html
+++ b/Card Types/Plural/Comprehension/Back_What is the image for this word.html
@@ -2,19 +2,19 @@
 
 <hr id=answer>
 
-<br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
+<br><div style="object-fit:contain; height:250px;">{{Picture}} {{Picture}}</div></br>
 
 {{#Masculine}}
   <br><span style="color:black; padding:5px; border:5px solid blue;">{{Plural}}</span><br/>
-  <br><span style="color:black; padding:5px; border:5px solid blue;">{{Plural Article + IPA}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
 {{/Masculine}}
 
 {{#Feminine}}
   <br><span style="color:black; padding:5px; border:5px solid pink;">{{Plural}}</span><br/>
-  <br><span style="color:black; padding:5px; border:5px solid pink;">{{Plural Article + IPA}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
 {{/Feminine}}
 
 {{#Neuter}}
   <br><span style="color:black; padding:5px; border:5px solid gray;">{{Plural}}</span><br/>
-  <br><span style="color:black; padding:5px; border:5px solid gray;">{{Plural Article + IPA}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
 {{/Neuter}}
