--- a/Card Types/Singular/Comprehension/Back_What is the image for this word.html
+++ b/Card Types/Singular/Comprehension/Back_What is the image for this word.html
@@ -6,15 +6,15 @@
 
 {{#Masculine}}
   <br><span style="color:black; padding:5px; border:5px solid blue;">{{Singular}}</span><br/>
-  <br><span style="color:black; padding:5px; border:5px solid blue;">{{Singular Article + IPA}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
 {{/Masculine}}
 
 {{#Feminine}}
   <br><span style="color:black; padding:5px; border:5px solid pink;">{{Singular}}</span><br/>
-  <br><span style="color:black; padding:5px; border:5px solid pink;">{{Singular Article + IPA}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
 {{/Feminine}}
 
 {{#Neuter}}
   <br><span style="color:black; padding:5px; border:5px solid gray;">{{Singular}}</span><br/>
-  <br><span style="color:black; padding:5px; border:5px solid gray;">{{Singular Article + IPA}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
 {{/Neuter}}
