--- a/Card Types/Singular/Comprehension/Front_What is the image for this word.html
+++ b/Card Types/Singular/Comprehension/Front_What is the image for this word.html
@@ -11,7 +11,7 @@
   {{#Feminine}}
     <br><span style="color:black; padding:5px; border:5px solid pink;">{{Singular}}</span><br/>
     <br><div style="background-color:pink;">
-      <img src="https://i.imgur.com/viJwgk8.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;">
+      <img src="https://i.imgur.com/UWdYoKX.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;">
     </div><br/>
   {{/Feminine}}
 
