--- a/Card Types/Singular/Pronunciation/Back_How-do-you-you-say.html
+++ b/Card Types/Singular/Pronunciation/Back_How-do-you-you-say.html
@@ -2,6 +2,19 @@
 
 <hr id=answer>
 
-<div style="font-family:Arial; font-size:20px;">{{Singular}}</div>
-<div style="font-family:Arial; font-size:20px;">{{Singular Article + IPA}}</div>
 <div style="font-family:Arial; font-size:20px;">{{Singular Recording}}</div>
+
+{{#Masculine}}
+  <br><span style="color:black; padding:5px; border:5px solid blue;">{{Singular}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
+{{/Masculine}}
+
+{{#Feminine}}
+  <br><span style="color:black; padding:5px; border:5px solid pink;">{{Singular}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
+{{/Feminine}}
+
+{{#Neuter}}
+  <br><span style="color:black; padding:5px; border:5px solid gray;">{{Singular}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
+{{/Neuter}}
