--- a/Card Types/Singular/Pronunciation/Front_How-do-you-you-say.html
+++ b/Card Types/Singular/Pronunciation/Front_How-do-you-you-say.html
@@ -2,15 +2,24 @@
   <span>How do you say...?</span><br/>
 
   {{#Masculine}}
-    <br><span style="font-family:Arial; font-size:20px; color:white; background-color:blue;">{{Singular}}</span></br>
+    <br><span style="color:black; padding:5px; border:5px solid blue;">{{Singular}}</span><br/>
+    <br><div style="background-color:blue;">
+      <img src="https://i.imgur.com/I5dh3xe.png" style="float:right; margin-right:15px; border:5px solid blue; height:100px;">
+    </div><br/>
   {{/Masculine}}
 
   {{#Feminine}}
-    <br><span style="font-family:Arial; font-size:20px; color:white; background-color:pink;">{{Singular}}</span></br>
+    <br><span style="color:black; padding:5px; border:5px solid pink;">{{Singular}}</span><br/>
+    <br><div style="background-color:pink;">
+      <img src="https://i.imgur.com/UWdYoKX.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;">
+    </div><br/>
   {{/Feminine}}
 
   {{#Neuter}}
-    <br><span style="font-family:Arial; font-size:20px; color:white; background-color:gray;">{{Singular}}</span></br>
+    <br><span style="color:black; padding:5px; border:5px solid gray;">{{Singular}}</span><br/>
+    <br><div style="background-color:gray;">
+      <img src="https://i.imgur.com/l70VNHM.png" style="float:right; margin-right:15px; border:5px solid gray; height:100px;">
+    </div><br/>
   {{/Neuter}}
 
   <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
