Updates production front part of cards with new image and template

--- a/Card Types/Plural/Production/Front_Whats-the-word-for-this-picture.html
+++ b/Card Types/Plural/Production/Front_Whats-the-word-for-this-picture.html
@@ -2,18 +2,24 @@
   <span>What's the word for this picture?</span><br/>
 
   {{#Masculine}}
-    <br><div style="color:white; background-color:blue;">männlich</div><br/>
     <span style="font-family:Arial; font-size:20px;">{{Picture}}</span></br>
+    <br><div style="background-color:blue;">
+      <img src="https://i.imgur.com/I5dh3xe.png" style="float:right; margin-right:15px; border:5px solid blue; height:100px;">
+    </div><br/>
   {{/Masculine}}
 
   {{#Feminine}}
-    <br><div style="color:white; background-color:pink;">weiblich</div><br/>
     <span style="font-family:Arial; font-size:20px;">{{Picture}}</span></br>
+    <br><div style="background-color:pink;">
+      <img src="https://i.imgur.com/UWdYoKX.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;">
+    </div><br/>
   {{/Feminine}}
 
   {{#Neuter}}
-    <br><div style="color:white; background-color:gray;">sachlich</div><br/>
     <span style="font-family:Arial; font-size:20px;">{{Picture}}</span></br>
+    <br><div style="background-color:gray;">
+      <img src="https://i.imgur.com/l70VNHM.png" style="float:right; margin-right:15px; border:5px solid gray; height:100px;">
+    </div><br/>
   {{/Neuter}}
 
   <span style="font-family:Arial; font-size:20px;">[Plural]</span>
