--- a/Card Types/Plural/Production/Back_Whats-the-word-for-this-picture.html
+++ b/Card Types/Plural/Production/Back_Whats-the-word-for-this-picture.html
@@ -1,20 +1,20 @@
 {{FrontSide}}
+
 <hr id=answer>
 
+<div style="font-family:Arial; font-size:20px;">{{Plural Recording}}</div>
+
 {{#Masculine}}
-  <div style="background-color:blue;"></div>
+  <br><span style="color:black; padding:5px; border:5px solid blue;">{{Plural}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
 {{/Masculine}}
 
 {{#Feminine}}
-  <div style="background-color:pink;"></div>
+  <br><span style="color:black; padding:5px; border:5px solid pink;">{{Plural}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
 {{/Feminine}}
 
 {{#Neuter}}
-  <div style="background-color:gray;"></div>
+  <br><span style="color:black; padding:5px; border:5px solid gray;">{{Plural}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
 {{/Neuter}}
-
-
-<div style="font-family:Arial; font-size:20px;">{{Plural}}</div>
-<div style="font-family:Arial; font-size:20px;">{{Plural Article + IPA}}</div>
-
-<div style="font-family:Arial; font-size:20px;">{{Plural Recording}}</div>
