--- a/Card Types/Singular/Gender/Back_Whats-the-grammatical-gender-for-this-word.html
+++ b/Card Types/Singular/Gender/Back_Whats-the-grammatical-gender-for-this-word.html
@@ -1,26 +1,23 @@
 {{FrontSide}}
+
 <hr id=answer>
-<div style="font-family:Arial; font-size:20px;">{{Singular Article + IPA}}</div>
+
+<div style="font-family:Arial; font-size:20px;">{{Singular Recording}}</div>
 
 {{#Masculine}}
-  <div style="background-color:blue; margin-top:15px;">
-    <div style="vertical-align:middle; padding-top:15px;">männlich</div><br/>
-    <img src="https://i.imgur.com/I5dh3xe.png" style="height:100px; position:aboslute; right:0px; margin-bottom:15px;"></img><br/>
-  </div>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
+  <br><span style="color:black; padding:5px; border:5px solid blue;">männlich</span><br/>
+  <br><img src="https://i.imgur.com/I5dh3xe.png" style="border:5px solid blue; height:100px;"><br/>
 {{/Masculine}}
 
 {{#Feminine}}
-  <div style="background-color:pink; margin-top:15px;">
-    <div style="vertical-align:middle; padding-top:15px;">weiblich</div><br/>
-    <img src="https://i.imgur.com/UWdYoKX.png" style="height:100px; position:aboslute; right:0px; margin-bottom:15px;"></img><br/>
-  </div>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
+  <br><span style="color:black; padding:5px; border:5px solid pink;">weiblich</span><br/>
+  <br><img src="https://i.imgur.com/UWdYoKX.png" style="border:5px solid pink; height:100px;"><br/>
 {{/Feminine}}
 
 {{#Neuter}}
-  <div style="background-color:gray; margin-top:15px;">
-    <div style="vertical-align:middle; padding-top:15px;">sachlich</div><br/>
-    <img src="https://i.imgur.com/l70VNHM.png" style="height:100px; position:aboslute; right:0px; margin-bottom:15px;"></img><br/>
-  </div>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
+  <br><span style="color:black; padding:5px; border:5px solid gray;">sachlich</span><br/>
+  <br><img src="https://i.imgur.com/l70VNHM.png" style="border:5px solid gray; height:100px;"><br/>
 {{/Neuter}}
-
-<div style="font-family:Arial; font-size:20px;">{{Singular Recording}}</div>
