--- a/Card Types/Singular/Spelling/Back_Spell-this-word.html
+++ b/Card Types/Singular/Spelling/Back_Spell-this-word.html
@@ -1,33 +1,37 @@
+<div style="font-family: Arial; font-size: 20px;">{{Singular Recording}}</div>
+
 {{#Masculine}}
-  <span style="font-size:1.5em; background-color:blue; color:white;">{{Singular}}</span><br><br>
-  <span>{{Picture}}</span><br>
-  <hr id=answer>
-  <span>{{type:Singular}}</span><br>
-  <div style="background-color: blue; color:white;">
-    <span style="font-family: Arial; font-size: 20px;">{{Singular}}</span></br>
-    <span style="font-family: Arial; font-size: 20px;">{{Singular Article + IPA}}</span></br>
-  </div>
+  <br><span style="font-size:1.5em; color:black; padding:5px; border:5px solid blue;">{{Singular}}</span><br/><br/>
+  <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
+  <br><img src="https://i.imgur.com/I5dh3xe.png" style="float:right; margin-right:15px; border:5px solid blue; height:100px;"><br/>
+
+  <br><hr id=answer><br/>
+
+  <br><span>{{type:Singular}}</span><br/>
+  <br><span style="color:black; padding:5px; border:5px solid blue;">{{Singular}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
 {{/Masculine}}
 
 {{#Feminine}}
-<span style="font-size:1.5em; background-color:pink; color:white;">{{Singular}}</span><br><br>
-<span>{{Picture}}</span><br>
-<hr id=answer>
-<span>{{type:Singular}}</span><br>
-<div style="background-color: pink; color:white;">
-  <span style="font-family: Arial; font-size: 20px;">{{Singular}}</span></br>
-  <span style="font-family: Arial; font-size: 20px;">{{Singular Article + IPA}}</span></br>
-</div>
+  <br><span style="font-size:1.5em; color:black; padding:5px; border:5px solid pink;">{{Singular}}</span><br/><br/>
+  <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
+  <br><img src="https://i.imgur.com/UWdYoKX.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;"><br/>
+
+  <br><hr id=answer><br/>
+
+  <br><span>{{type:Singular}}</span><br/>
+  <br><span style="color:black; padding:5px; border:5px solid pink;">{{Singular}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
 {{/Feminine}}
 
 {{#Neuter}}
-<span style="font-size:1.5em; background-color:gray; color:white;">{{Singular}}</span><br><br>
-<span>{{Picture}}</span><br>
-<hr id=answer>
-<span>{{type:Singular}}</span><br>
-<div style="background-color: gray; color:white;">
-  <span style="font-family: Arial; font-size: 20px;">{{Singular}}</span></br>
-  <span style="font-family: Arial; font-size: 20px;">{{Singular Article + IPA}}</span></br>
-</div>
+  <br><span style="font-size:1.5em; color:black; padding:5px; border:5px solid gray;">{{Singular}}</span><br/><br/>
+  <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
+  <br><img src="https://i.imgur.com/l70VNHM.png" style="float:right; margin-right:15px; border:5px solid gray; height:100px;"><br/>
+
+  <br><hr id=answer><br/>
+
+  <br><span>{{type:Singular}}</span><br/>
+  <br><span style="color:black; padding:5px; border:5px solid gray;">{{Singular}}</span><br/>
+  <br><span style="color:gray; margin-top:5px;">{{Singular Article + IPA}}</span><br/>
 {{/Neuter}}
-<div style="font-family: Arial; font-size: 20px;">{{Singular Recording}}</div>
