--- a/Card Types/Plural/Production/Front_Whats-the-word-for-this-picture.html
+++ b/Card Types/Plural/Production/Front_Whats-the-word-for-this-picture.html
@@ -1,5 +1,6 @@
 {{#Plural}}
   <span>What's the word for this picture?</span><br/>
+  <span style="font-family:Arial; font-size:20px;">[Plural]</span><br/>
 
   {{#Masculine}}
     <span style="font-family:Arial; font-size:20px;">{{Picture}}</span></br>
@@ -22,6 +23,4 @@
     </div><br/>
   {{/Neuter}}
 
-  <span style="font-family:Arial; font-size:20px;">[Plural]</span>
-  <br/>
 {{/Plural}}
