Adds second picture for plural spelling card

--- a/Card Types/Plural/Spelling/Front_Spell-this-word.html
+++ b/Card Types/Plural/Spelling/Front_Spell-this-word.html
@@ -4,7 +4,7 @@
     <span>Spell this word:</span><br/>
 
     <br><span>[Plural]</span></br>
-    <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
+    <br><div style="object-fit:contain; height:250px;">{{Picture}} {{Picture}}</div></br>
     <span>{{type:Plural}}</span><br/>
     <div>{{Plural Recording}}</div>
   {{/Plural}}
