Updates pronunciation cards for when word has no gender

--- a/Card Types/Singular/Pronunciation/Front_How-do-you-you-say.html
+++ b/Card Types/Singular/Pronunciation/Front_How-do-you-you-say.html
@@ -1,22 +1,20 @@
 {{#Singular}}
   <span>How do you say...?</span><br/>
+  <br><span style="color:black; padding:5px;">{{Singular}}</span><br/>
 
   {{#Masculine}}
-    <br><span style="color:black; padding:5px; border:5px solid blue;">{{Singular}}</span><br/>
     <br><div style="background-color:blue;">
       <img src="https://i.imgur.com/I5dh3xe.png" style="float:right; margin-right:15px; border:5px solid blue; height:100px;">
     </div><br/>
   {{/Masculine}}
 
   {{#Feminine}}
-    <br><span style="color:black; padding:5px; border:5px solid pink;">{{Singular}}</span><br/>
     <br><div style="background-color:pink;">
       <img src="https://i.imgur.com/UWdYoKX.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;">
     </div><br/>
   {{/Feminine}}
 
   {{#Neuter}}
-    <br><span style="color:black; padding:5px; border:5px solid gray;">{{Singular}}</span><br/>
     <br><div style="background-color:gray;">
       <img src="https://i.imgur.com/l70VNHM.png" style="float:right; margin-right:15px; border:5px solid gray; height:100px;">
     </div><br/>
