--- a/Card Types/Plural/Pronunciation/Front_How-do-you-you-say.html
+++ b/Card Types/Plural/Pronunciation/Front_How-do-you-you-say.html
@@ -1,26 +1,24 @@
 {{#Plural}}
   <span>How do you say...?</span><br/>
+  <br><span style="color:black; padding:5px;">{{Plural}}</span><br/>
 
   {{#Masculine}}
-    <br><span style="color:black; padding:5px; border:5px solid blue;">{{Plural}}</span><br/>
     <br><div style="background-color:blue;">
       <img src="https://i.imgur.com/I5dh3xe.png" style="float:right; margin-right:15px; border:5px solid blue; height:100px;">
     </div><br/>
   {{/Masculine}}
 
   {{#Feminine}}
-    <br><span style="color:black; padding:5px; border:5px solid pink;">{{Plural}}</span><br/>
     <br><div style="background-color:pink;">
       <img src="https://i.imgur.com/UWdYoKX.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;">
     </div><br/>
   {{/Feminine}}
 
   {{#Neuter}}
-    <br><span style="color:black; padding:5px; border:5px solid gray;">{{Plural}}</span><br/>
     <br><div style="background-color:gray;">
       <img src="https://i.imgur.com/l70VNHM.png" style="float:right; margin-right:15px; border:5px solid gray; height:100px;">
     </div><br/>
   {{/Neuter}}
 
-  <br><div style="object-fit:contain; height:250px;">{{Picture}} {{Picture}}</div></br>
+  <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
 {{/Plural}}
