Updates back sides of cards when word has no gender

--- a/Card Types/Plural/Production/Back_Whats-the-word-for-this-picture.html
+++ b/Card Types/Plural/Production/Back_Whats-the-word-for-this-picture.html
@@ -3,18 +3,5 @@
 <hr id=answer>
 
 <div style="font-family:Arial; font-size:20px;">{{Plural Recording}}</div>
-
-{{#Masculine}}
-  <br><span style="color:black; padding:5px; border:5px solid blue;">{{Plural}}</span><br/>
-  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
-{{/Masculine}}
-
-{{#Feminine}}
-  <br><span style="color:black; padding:5px; border:5px solid pink;">{{Plural}}</span><br/>
-  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
-{{/Feminine}}
-
-{{#Neuter}}
-  <br><span style="color:black; padding:5px; border:5px solid gray;">{{Plural}}</span><br/>
-  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
-{{/Neuter}}
+<br><span style="color:black; padding:5px;">{{Plural}}</span><br/>
+<br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
