--- a/Card Types/Plural/Spelling/Back_Spell-this-word.html
+++ b/Card Types/Plural/Spelling/Back_Spell-this-word.html
@@ -1,37 +1,21 @@
 <div style="font-family: Arial; font-size: 20px;">{{Plural Recording}}</div>
+<br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
+<br><span style="font-size:1.5em; color:black;">{{Plural}}</span><br/><br/>
 
 {{#Masculine}}
-  <br><span style="font-size:1.5em; color:black; padding:5px; border:5px solid blue;">{{Plural}}</span><br/><br/>
-  <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
   <br><img src="https://i.imgur.com/I5dh3xe.png" style="float:right; margin-right:15px; border:5px solid blue; height:100px;"><br/>
-
-  <br><hr id=answer><br/>
-
-  <br><span>{{type:Plural}}</span><br/>
-  <br><span style="color:black; padding:5px; border:5px solid blue;">{{Plural}}</span><br/>
-  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
 {{/Masculine}}
 
 {{#Feminine}}
-  <br><span style="font-size:1.5em; color:black; padding:5px; border:5px solid pink;">{{Plural}}</span><br/><br/>
-  <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
   <br><img src="https://i.imgur.com/UWdYoKX.png" style="float:right; margin-right:15px; border:5px solid pink; height:100px;"><br/>
-
-  <br><hr id=answer><br/>
-
-  <br><span>{{type:Plural}}</span><br/>
-  <br><span style="color:black; padding:5px; border:5px solid pink;">{{Plural}}</span><br/>
-  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
 {{/Feminine}}
 
 {{#Neuter}}
-  <br><span style="font-size:1.5em; color:black; padding:5px; border:5px solid gray;">{{Plural}}</span><br/><br/>
-  <br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
   <br><img src="https://i.imgur.com/l70VNHM.png" style="float:right; margin-right:15px; border:5px solid gray; height:100px;"><br/>
-
-  <br><hr id=answer><br/>
-
-  <br><span>{{type:Plural}}</span><br/>
-  <br><span style="color:black; padding:5px; border:5px solid gray;">{{Plural}}</span><br/>
-  <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
 {{/Neuter}}
+
+<br><hr id=answer><br/>
+
+<br><span>{{type:Plural}}</span><br/>
+<br><span style="color:black;">{{Plural}}</span><br/>
+<br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
