Update comprehension cards

--- a/Card Types/Plural/Comprehension/Front_What is the image for this word.html
+++ b/Card Types/Plural/Comprehension/Front_What is the image for this word.html
@@ -1,5 +1,6 @@
 {{#Plural}}
   <span>What does this word mean?</span><br/>
+  <br><span style="color:black;">[Plural]</span><br/>
   <br><span style="color:black;">{{Plural}}</span><br/>
   <div style="font-family:Arial; font-size:20px;">{{Plural Recording}}</div>
 
