--- a/Card Types/Singular/Comprehension/Front_What is the image for this word.html
+++ b/Card Types/Singular/Comprehension/Front_What is the image for this word.html
@@ -1,5 +1,6 @@
 {{#Singular}}
   <span>What does this word mean?</span><br/>
+  <br><span style="color:black;">[Singular]</span><br/>
   <br><span style="color:black;">{{Singular}}</span><br/>
   <div style="font-family:Arial; font-size:20px;">{{Singular Recording}}</div>
 
