Update back side of plural comprehension

--- a/Card Types/Plural/Comprehension/Back_What is the image for this word.html
+++ b/Card Types/Plural/Comprehension/Back_What is the image for this word.html
@@ -2,6 +2,6 @@
 
 <hr id=answer>
 
-<br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
+<br><div style="object-fit:contain; height:250px;">{{Picture}} {{Picture}}</div></br>
 <br><span style="color:black;">{{Plural}}</span><br/>
 <br><span style="color:gray; margin-top:5px;">{{Plural Article + IPA}}</span><br/>
