Update plural spelling back side

--- a/Card Types/Plural/Spelling/Back_Spell-this-word.html
+++ b/Card Types/Plural/Spelling/Back_Spell-this-word.html
@@ -1,5 +1,5 @@
 <div style="font-family: Arial; font-size: 20px;">{{Plural Recording}}</div>
-<br><div style="object-fit:contain; height:250px;">{{Picture}}</div></br>
+<br><div style="object-fit:contain; height:250px;">{{Picture}} {{Picture}}</div></br>
 <br><span style="font-size:1.5em; color:black;">{{Plural}}</span><br/><br/>
 
 {{#Masculine}}
